--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "otp-generator": "^4.0.1",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
     "socket.io": "^4.5.4"
