add review, get review of product, cal rate when review

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ GMAIL_PASSWORD=yeaaexhzluzpzgxq
 
 PAGE_SIZE = 2
 
+PAGE_SIZE_REVIEW = 2
+
 CLOUD_NAME=djbju13al
 API_KEY=575615221649691
 API_SECRET=Se08c_VicYMCRnyYIXGcDHpRmMY
