add image product, category

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 GMAIL_PASSWORD=yeaaexhzluzpzgxq
 
 PAGE_SIZE = 2
-
 PAGE_SIZE_REVIEW = 2
 
+# Config for cloudinary
 CLOUD_NAME=djbju13al
 API_KEY=575615221649691
 API_SECRET=Se08c_VicYMCRnyYIXGcDHpRmMY
+
 FACE_BOOK_ID=386194720824-isf48tkusj0ffef3emp3ke9kh4t2uic3.apps.googleusercontent.com
 FACE_BOOK_SECRET=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
