auth for product, review

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ API_SECRET=Se08c_VicYMCRnyYIXGcDHpRmMY
 
 FACE_BOOK_ID=386194720824-isf48tkusj0ffef3emp3ke9kh4t2uic3.apps.googleusercontent.com
 FACE_BOOK_SECRET=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
+
+# JWT
+JWT_ACCESS_KEY = duc-nd
