--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.4",
     "mysql2": "^3.1.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
