--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redis": "^4.6.4",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "stripe": "^12.2.0"
   }
 }
