--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.1",
+    "randomstring": "^1.2.3",
     "redis": "^4.6.4",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
